--- a/.github/workflows/pull-request.yaml
+++ b/.github/workflows/pull-request.yaml
@@ -140,7 +140,13 @@ jobs:
 
       - name: Run tests
         working-directory: packages/angular
-        run: npm run test:ci
+        run: |
+          npm run test:ci
+          status=$?
+          if [ $status -ne 0 ]; then
+            echo "::error title=Angular tests::packages/angular test:ci failed (exit $status)"
+            exit $status
+          fi
 
   quality-core:
     runs-on: ubuntu-latest
