--- a/packages/angular/package.json
+++ b/packages/angular/package.json
@@ -38,6 +38,7 @@
     "@storybook/test-runner": "^0.23.0",
     "@types/jasmine": "~5.1.0",
     "angular-eslint": "^19.6.0",
+    "babel-loader": "^10.0.0",
     "jasmine-core": "~5.1.0",
     "karma": "~6.4.0",
     "karma-chrome-launcher": "~3.2.0",
