fix: correct sidenav display when no stories are provided to a section

--- a/packages/design-docs/.storybook/displayConfig.json
+++ b/packages/design-docs/.storybook/displayConfig.json
@@ -5,7 +5,7 @@
     ],
     "hiddenStories": {
         "design-system": [],
-        "démarrage": [],
-        "bascule": []
+        "démarrage": ["angular", "react"],
+        "bascule": ["angular", "react"]
     }
 }
