--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
     "build-base-storybook": "npm --prefix packages/design-docs run build-base-storybook",
     "build-design-docs": "npm --prefix packages/design-docs run build-storybook",
     "bundle-packages": "node scripts/bundle-packages.js",
-    "install-bundles": "npm --prefix test-apps/angular install && npm --prefix test-apps/react install",
+    "install-bundles": "npm --prefix test-apps/angular install && npm --prefix test-apps/react install && npm --prefix test-apps/react@19 install",
     "copy-angular-icons": "node scripts/copy-angular-icons.js",
     "prepare-test-apps": "npm run bundle-packages && npm run install-bundles && npm run copy-angular-icons",
     "test-bundle:angular": "npm --prefix test-apps/angular start",
