feat (docs): add navigation for GetStarted sections

--- a/packages/design-docs/.storybook/displayConfig.json
+++ b/packages/design-docs/.storybook/displayConfig.json
@@ -1,11 +1,10 @@
 {
-    "hiddenSections": [
-        "démarrage",
-        "bascule"
-    ],
+    "hiddenSections": [],
     "hiddenStories": {
-        "design-system": [],
-        "démarrage": ["angular", "react"],
-        "bascule": ["angular", "react"]
+        "design-system": [
+            "get-started-kit-de-migration-général",
+            "get-started-kit-de-migration-pour-les-designers",
+            "get-started-contribuer"
+        ]
     }
 }
