feat (docs): rearange component navigation structure

--- a/packages/design-docs/.storybook/displayConfig.json
+++ b/packages/design-docs/.storybook/displayConfig.json
@@ -1,5 +1,5 @@
 {
-    "hiddenSections": [],
+    "hiddenSections": ["angular_composants"],
     "hiddenStories": {
         "design-system": [
             "get-started-kit-de-migration-général",
