feat (docs): add governance docs

--- a/packages/design-docs/.storybook/displayConfig.json
+++ b/packages/design-docs/.storybook/displayConfig.json
@@ -3,8 +3,7 @@
     "hiddenStories": {
         "design-system": [
             "get-started-kit-de-migration-général",
-            "get-started-kit-de-migration-pour-les-designers",
-            "get-started-contribuer"
+            "get-started-kit-de-migration-pour-les-designers"
         ]
     }
 }
