feat(docs): add Kit de migration - general page

--- a/packages/design-docs/.storybook/displayConfig.json
+++ b/packages/design-docs/.storybook/displayConfig.json
@@ -1,9 +1,11 @@
 {
-    "hiddenSections": ["angular_composants"],
+    "hiddenSections": [
+        "angular_composants"
+    ],
     "hiddenStories": {
         "design-system": [
-            "get-started-kit-de-migration-général",
-            "get-started-kit-de-migration-pour-les-designers"
+            "get-started-kit-de-migration-pour-les-designers",
+            "get-started-contribuer"
         ]
     }
 }
