feat (docs): add design startup docs

--- a/packages/design-docs/.storybook/displayConfig.json
+++ b/packages/design-docs/.storybook/displayConfig.json
@@ -1,11 +1,5 @@
 {
-    "hiddenSections": [
-        "angular_composants"
-    ],
     "hiddenStories": {
-        "design-system": [
-            "get-started-kit-de-migration-pour-les-designers",
-            "get-started-contribuer"
-        ]
+        "design-system": []
     }
 }
