fix(design-docs): add react package as dependencies

--- a/packages/design-docs/package.json
+++ b/packages/design-docs/package.json
@@ -35,6 +35,7 @@
     "vitest": "^3.0.9"
   },
   "dependencies": {
+    "@design-system-rte/react": "^1.0.0",
     "@storybook/addon-themes": "^8.6.11"
   }
 }
