--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -87,6 +87,10 @@ jobs:
         working-directory: packages/react
         run: npm run lint:fix
 
+      - name: Build React Package
+        working-directory: packages/react
+        run: npm run build
+
       - name: Run tests
         working-directory: packages/react
         run: npm run test:ci
