--- a/packages/react/package.json
+++ b/packages/react/package.json
@@ -2,9 +2,17 @@
   "name": "@design-system-rte/react",
   "version": "1.0.0",
   "type": "module",
-  "module": "dist/react-package.js",
-  "main": "dist/react-package.cjs",
-  "types": "dist/index.d.ts",
+  "module": "./dist/react-package.js",
+  "main": "./dist/react-package.js",
+  "types": "./dist/index.d.ts",
+  "style": "./dist/style.css",
+  "exports": {
+    ".": {
+      "import": "./dist/react-package.js",
+      "types": "./dist/index.d.ts"
+    },
+    "./style.css": "./dist/style.css"
+  },
   "files": [
     "dist"
   ],
@@ -17,7 +25,7 @@
     "storybook": "storybook dev -p 7008",
     "build-storybook": "storybook build -o ../design-docs/storybook-static/react",
     "test:ci": "npx playwright install && npx start-server-and-test storybook http://localhost:7008 test",
-    "test": "test-storybook --url http://localhost:7008 --failOnConsole --maxWorkers=2",
+    "test": "test-storybook --url http://localhost:7008 --failOnConsole --maxWorkers=2 --testTimeout=30000",
     "test:watch": "test-storybook --url http://localhost:7008 --watch",
     "prepublishOnly": "npm run generate-icons && npm run build",
     "generate:component": "node scripts/generate-component.js"
