--- a/package.json
+++ b/package.json
@@ -50,11 +50,13 @@
     "@changesets/cli": "^2.28.1",
     "@eslint/js": "^9.21.0",
     "@types/node": "^25.0.2",
+    "common-path-prefix": "^3.0.0",
     "eslint": "^9.37.0",
     "eslint-config-prettier": "^10.0.2",
     "eslint-plugin-import": "^2.32.0",
     "eslint-plugin-prettier": "^5.2.3",
     "eslint-plugin-storybook": "^0.11.4",
+    "fd-package-json": "^2.0.0",
     "husky": "^9.1.7",
     "prettier": "^3.5.3",
     "tsx": "^4.20.6"
