--- a/packages/core/package.json
+++ b/packages/core/package.json
@@ -6,8 +6,9 @@
     "lint": "eslint .",
     "lint:fix": "eslint . --fix",
     "test": "vitest run",
-    "build": "npm run build:css-themes",
+    "build": "npm run build:css-themes && npm run build:css-fonts",
     "build:css-themes": "ts-node css-theme-generator.ts",
+    "build:css-fonts": "ts-node css-font-generator.ts",
     "generate:tokens": "ts-node ./design-tokens/generator.ts",
     "prepublishOnly": "npm run build"
   },
