--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -48,6 +48,19 @@ jobs:
 
       - name: Generate icons
         run: npm run generate:icons
+      
+      - name: Build Core Package
+        working-directory: packages/core
+        run: npm run build
+
+      - name: Cache Build Core
+        id: cache-build-core
+        uses: actions/cache@v4
+        with:
+          path: |
+            ./core/css
+          key: build-core-${{ hashFiles('package-lock.json') }}-${{ github.sha }}
+
 
 
   quality-react:
@@ -82,6 +95,13 @@ jobs:
             ./packages/react/src/components/icon/generated
             ./packages/angular/projects/ds-rte-lib/src/lib/assets/icons
           key: icons-${{ hashFiles('package-lock.json') }}-${{ github.sha }}
+
+      - name: Restore cache build core
+        uses: actions/cache@v4
+        with:
+          path: |
+            ./packages/core/css
+          key: build-core-${{ hashFiles('package-lock.json') }}-${{ github.sha }}
 
       - name: Lint
         working-directory: packages/react
@@ -129,7 +149,7 @@ jobs:
           key: icons-${{ hashFiles('package-lock.json') }}-${{ github.sha }}
           restore-keys: |
             icons
-      
+
       - name: Cache react build output
         uses: actions/cache@v4
         with:
@@ -173,6 +193,13 @@ jobs:
             ./packages/react/src/components/icon/generated
             ./packages/angular/projects/ds-rte-lib/src/lib/assets/icons
           key: icons-${{ hashFiles('package-lock.json') }}-${{ github.sha }}
+    
+      - name: Restore cache build core
+        uses: actions/cache@v4
+        with:
+          path: |
+            ./packages/core/css
+          key: build-core-${{ hashFiles('package-lock.json') }}-${{ github.sha }}
             
       - name: Lint
         working-directory: packages/react
