--- a/packages/angular/package.json
+++ b/packages/angular/package.json
@@ -51,6 +51,8 @@
     "typescript": "~5.4.2"
   },
   "dependencies": {
-    "@babel/preset-typescript": "^7.27.1"
+    "@babel/preset-typescript": "^7.27.1",
+    "common-path-prefix": "^3.0.0",
+    "fd-package-json": "^1.2.0"
   }
 }
