--- a/package.json
+++ b/package.json
@@ -49,14 +49,12 @@
     "@angular/cli": "^18.2.21",
     "@changesets/cli": "^2.28.1",
     "@eslint/js": "^9.21.0",
+    "@stylistic/eslint-plugin": "^5.6.1",
     "@types/node": "^25.0.2",
     "eslint": "^9.37.0",
-    "eslint-config-prettier": "^10.0.2",
     "eslint-plugin-import": "^2.32.0",
-    "eslint-plugin-prettier": "^5.2.3",
     "eslint-plugin-storybook": "^0.11.4",
     "husky": "^9.1.7",
-    "prettier": "^3.5.3",
     "tsx": "^4.20.6"
   }
 }
