--- a/package.json
+++ b/package.json
@@ -50,6 +50,7 @@
     "@changesets/cli": "^2.28.1",
     "@eslint/js": "^9.21.0",
     "@types/node": "^25.0.2",
+    "esbuild": "^0.23.0",
     "eslint": "^9.37.0",
     "eslint-config-prettier": "^10.0.2",
     "eslint-plugin-import": "^2.32.0",
