--- a/package.json
+++ b/package.json
@@ -52,12 +52,13 @@
     "@types/node": "^25.0.2",
     "esbuild": "^0.23.0",
     "eslint": "^9.37.0",
-    "eslint-config-prettier": "^10.0.2",
+    "eslint-config-prettier": "^10.1.8",
     "eslint-plugin-import": "^2.32.0",
     "eslint-plugin-prettier": "^5.2.3",
     "eslint-plugin-storybook": "^0.11.4",
     "husky": "^9.1.7",
     "prettier": "^3.5.3",
+    "prettier-eslint": "^16.4.2",
     "tsx": "^4.20.6"
   }
 }
