--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -99,13 +99,6 @@ jobs:
         with:
           path: |
             ./packages/core/css
-          key: build-core-${{ hashFiles('package-lock.json') }}-${{ github.sha }}
-
-      - name: Restore cache build core
-        uses: actions/cache@v4
-        with:
-          path: |
-            ./packages/core/css
             ./packages/core/dist
           key: build-core-${{ hashFiles('package-lock.json') }}-${{ github.sha }}
 
@@ -156,6 +149,20 @@ jobs:
           restore-keys: |
             icons
 
+      - name: Restore cache build core
+        id: cache-build-core
+        uses: actions/cache@v4
+        with:
+          path: |
+            ./packages/core/css
+            ./packages/core/dist
+          key: build-core-${{ hashFiles('package-lock.json') }}-${{ github.sha }}
+
+      - name: Build Core Package
+        if: steps.cache-build-core.outputs.cache-hit != 'true'
+        working-directory: packages/core
+        run: npm run build
+
       - name: Cache react build output
         uses: actions/cache@v4
         with:
@@ -180,6 +187,7 @@ jobs:
           node-version: 20
 
       - name: Restore cache node_modules and Vite cache
+        id: cache-deps
         uses: actions/cache@v4
         with:
           path: |
@@ -192,7 +200,12 @@ jobs:
           restore-keys: |
             deps-node20-main-
 
+      - name: Install dependencies
+        if: steps.cache-deps.outputs.cache-hit != 'true'
+        run: npm ci --prefer-offline
+
       - name: Restore cache icons
+        id: cache-icons
         uses: actions/cache@v4
         with:
           path: |
@@ -200,27 +213,33 @@ jobs:
             ./packages/angular/projects/ds-rte-lib/src/lib/assets/icons
           key: icons-${{ hashFiles('package-lock.json') }}-${{ github.sha }}
 
-      - name: Restore cache build core
-        uses: actions/cache@v4
-        with:
-          path: |
-            ./packages/core/css
-          key: build-core-${{ hashFiles('package-lock.json') }}-${{ github.sha }}
+      - name: Generate icons
+        if: steps.cache-icons.outputs.cache-hit != 'true'
+        run: npm run generate:icons
 
       - name: Restore cache build core
+        id: cache-build-core
         uses: actions/cache@v4
         with:
           path: |
             ./packages/core/css
+            ./packages/core/dist
           key: build-core-${{ hashFiles('package-lock.json') }}-${{ github.sha }}
+
+      - name: Build Core Package
+        if: steps.cache-build-core.outputs.cache-hit != 'true'
+        working-directory: packages/core
+        run: npm run build
 
       - name: Lint
-        working-directory: packages/react
+        working-directory: packages/angular
         run: npm run lint:fix
 
       - name: Run tests
         working-directory: packages/angular
         run: npm run test:ci
+        env:
+          NODE_OPTIONS: "--max-old-space-size=4096"
 
   build-angular:
     runs-on: ubuntu-latest
